...
    android:orientation="vertical"
    tools:context=".ui.TestActivity">

    <include layout="@layout/app_bar_layout" />

    <ScrollView
        android:id="@+id/formLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
                        android:hint="@string/email_address"
                        android:visibility="gone"
                        app:hintTextAppearance="@style/TextLabel"
                        tools:visibility="visible">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/card_bg"
                            android:inputType="text|textEmailAddress"
                            android:maxLength="60"
                            android:paddingStart="6dp"
...
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/location_view"
                style="@style/CustomCardView"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
